# vaulty

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXTRA_FIELDS_SPRINT.md  README.md  SPRINT.md  UPDATE_SPRINT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vaulty.key  vaulty.key.pub  vite.config.js  vite.config.ts
.github/workflows/: release.yml
releases/v1.0.0/: README.txt
scripts/: bump-version.js  package.js
src/: App.vue  main.ts  style.css  tauri.d.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tauri.d.ts
src-tauri/src/sync/: commands.rs  identity.rs  mod.rs  peer.rs
src/components/: ConfirmationModal.vue  Dashboard.vue  FirstLaunch.vue  ForgotPasswordModal.vue  Login.vue  PasswordEntry.vue  PasswordList.vue  PasswordOwners.vue  SyncCode.vue  SyncPanel.vue  UpdateBanner.vue
src/plugins/: activityTracker.ts
src/services/: browserDatabase.ts  database.ts  encryption.ts  securityQuestions.ts  sync.ts  syncPeers.ts  syncProtocol.ts  vaultIdentity.ts
src/stores/: auth.ts  passwordOwners.ts  sync.ts  updater.ts
src/types/: index.ts
src/utils/: security.ts  tauri.ts
